Fix header stretching to full screen width, after i made it position fixed.

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,8 +3,10 @@
 .header {
   position: fixed;
   top: 0;
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   width: 100%;
+  max-width: 1440px;
   z-index: 3;
   background-color: var(--background-color);
   padding-block: 26px;
